# MultimodalAnalytical

./: .gitignore  .pre-commit-config.yaml  .travis.yml  .whitesource  CNMR_test_idx.npy  HNMR_test_idx.npy  IR_test_idx.npy  LICENSE.tmpl  README.md  pyproject.toml  requirements.txt  test_laura.ipynb
.github/workflows/: tests.yaml
configs/: config_predict.yaml  config_train.yaml
configs/activeft/: activeft.yaml
configs/augment/: ir.yaml  no_augment.yaml
configs/augment/ir/: combined.yaml
configs/data/h_nmr/: multiplets_peak_pos.yaml
configs/data/ir/: patches_mixture_percentage.yaml  patches_mixture_text.yaml  patches_mixture_text_align.yaml  rle_enc.yaml  text_enc.yaml
configs/data/msms/: number.yaml  text.yaml  text_fingerprint.yaml
configs/data/multimodal_analytical/: multiplets_spectra.yaml  neg_msms.yaml
configs/data/phosphor/: formula_num.yaml  num.yaml
configs/mixture/ir/: multitask.yaml  multitask_w_pure.yaml
configs/model/: custom_model.yaml  custom_model_align.yaml
docs/: index.html
paper_replication/: phosphor_paper.md
paper_replication/ir/: README.md
paper_replication/ir/scripts/: download_process_data.sh  filter_nist.py  finetuning.sh  process_data.py  replicate_table_1.sh  replicate_table_2.sh  replicate_table_3.sh
paper_replication/ir_addendum/: README.md
paper_replication/mixture/: README.md
paper_replication/mixture/scripts/: download_process_data.sh  replicate_table_1.sh  replicate_table_2_and_10.sh  replicate_table_2_and_3.sh  replicate_table_3.sh  replicate_table_4.sh  replicate_table_5.sh  replicate_table_6.sh  replicate_table_7.sh  replicate_table_8.sh
paper_replication/msms/: README.md
paper_replication/msms/data_preparation/: preprocessing-msg.ipynb  preprocessing-sim.ipynb  processing-nplib1.ipynb
paper_replication/msms/scripts/: eval.sh  finetuning.sh  pretraining.sh  train_from_scratch.sh  ttt.sh
paper_replication/multimodal/: README.md
paper_replication/multimodal/scripts/: download_data.sh  finetuning.sh  multitask_model.sh  singletask_models.sh
paper_replication/phosphor/: README.md
paper_replication/phosphor/scripts/: download_process_data.sh  phosphor_finetuning.sh  phosphor_from_scratch.sh  phosphor_pretraining.sh  process_hack_data.py
paper_replication/scripts_ir_nmr_multimodal_comp_spectra_dataset/: README.md  requirements.txt
paper_replication/scripts_ir_nmr_multimodal_comp_spectra_dataset/sample_data/: IR-data_dipole_id_0_auto_damped.csv  autocorr_damp_dipole_id_0.txt  autocorr_orig_dipole_id_0.txt  dipole_id_0.npy
paper_replication/scripts_ir_nmr_multimodal_comp_spectra_dataset/scripts/: make_input_cpmd_from_xyz.py  make_input_cpmd_with_vdW_from_xyz.py  make_xyz_file_from_smiles.py
paper_replication/scripts_ir_nmr_multimodal_comp_spectra_dataset/scripts_dipole_true_pred_error_fig6_and_fig7/: README.md  collect_y_pred_y_true.py  collect_y_pred_y_true_Only_plot_selected.py  plot_figure6.py  plot_figure7.py
paper_replication/scripts_ir_nmr_multimodal_comp_spectra_dataset/scripts_ir_spectra/: README.md  compute_ir_spectra_from_dipole_dipole_autocorrelation.py  make_IR_plot_from_parquet.py  plot_IR_spectra_from_parquet.ipynb
paper_replication/scripts_ir_nmr_multimodal_comp_spectra_dataset/scripts_nmr_fig_9/: README.md  plot_H_NMR_C_NMR_selected_ids.ipynb  plot_H_NMR_C_NMR_selected_ids.py.txt  sample_exp_data.json
scripts/: test_model.sh  train_model.sh  train_model_all.sh  train_model_interactive.sh
scripts/vela/: README.md  cleanup.sh  config_example.yaml  submit_to_vela.sh  vela_preparation.py  vela_template.yaml
scripts/vela/fms-job-templates/: README.md
src/analytical_fm/: configuration.py  utils.py
src/analytical_fm/cli/: predict.py  training.py  training_ttt.py
src/analytical_fm/data/: augmentations.py  data_utils.py  datamodules.py  datasets.py  preprocessors.py  tokenizer.py
src/analytical_fm/generation/: logit_processors.py
src/analytical_fm/modeling/: custom_bart_modeling.py  custom_modeling.py  utils.py  wrapper.py
src/analytical_fm/trainer/: trainer.py
src/cli/: predict.py  training.py
src/configs/: config.yaml  config_predict.yaml  config_train.yaml
src/configs/model/: custom_hf_bart.yaml
src/mmbart/: __init__.py  defaults.py  some_module.py  util.py  utils.py
tests/: __init__.py  test_data_analysis_cli.py  test_data_analysis_utils.py  test_data_datacollators.py  test_hf_data_loader.py  test_models_core.py  test_models_tokenizers.py  test_preprocessing_lambda.py  test_run.py  test_scoring.py  test_some_module.py  test_train_pipeline.py
tests/test_data/: test_b.csv
(+89 files in other folders)
